# llm-router

./: .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  LOG.txt  README.md  SPEC.md  debug-browser.js  docker-compose.pi.yml  docker-compose.yml  package-lock.json  package.json
.claude/: settings.local.json
backend/: config.py  database.py  main.py  models.py  pyproject.toml  requirements.txt
backend/routers/: chat.py  conversations.py  images.py  usage.py
backend/services/: llm_client.py  model_catalog.py  system_prompt.py  usage_tracker.py
backend/tests/: test_config.py  test_system_prompt.py
docs/: SESSION_LOG.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: api.ts  commands.ts  main.ts  types.ts
frontend/src/components/: BrowserTerminal.ts  ChatInterface.ts  MessageInput.ts  MessageList.ts  ModelSelector.ts  Sidebar.ts
frontend/src/state/: store.ts
frontend/src/styles/: main.css
scripts/: api-smoke.js  image-smoke.js  ux-extended.js  ux-helpers.js  ux-manual.js  ux-matrix.js  ux-smoke.js
